--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,7 @@
   "name": "Code Snippet Organizer",
   "version": "1.0",
   "description": "Organize your code snippets for easy access and use.",
+  "host_permissions": ["<all_urls>"],
   "icons": {
     "16": "icons/16x16.png",
     "32": "icons/32x32.png",
@@ -20,8 +21,14 @@
       "height": 600
     }
   },
-  "permissions": ["storage"],
+  "permissions": ["storage", "activeTab", "scripting"],
   "background": {
     "service_worker": "background.js"
-  }
+  },
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "js": ["content.js"]
+    }
+  ]
 }
