--- a/manifest.json
+++ b/manifest.json
@@ -1,27 +1,17 @@
 {
   "manifest_version": 3,
   "name": "Code Snippet Organizer",
+  "description": "Organize and manage your code snippets with automatic language and description detection.",
   "version": "1.0",
-  "description": "Organize your code snippets for easy access and use.",
-  "host_permissions": ["<all_urls>"],
-  "icons": {
-    "16": "icons/16x16.png",
-    "32": "icons/32x32.png",
-    "128": "icons/128x128.png"
-  },
   "action": {
-    "default_popup": "popup.html",
+    "default_popup": "popup/popup.html",
     "default_icon": {
-      "16": "icons/16x16.png",
-      "32": "icons/32x32.png",
-      "128": "icons/128x128.png"
-    },
-    "default_size": {
-      "width": 400,
-      "height": 600
+      "16": "icons/icon-16.png",
+      "48": "icons/icon-48.png",
+      "128": "icons/icon-128.png"
     }
   },
-  "permissions": ["storage", "activeTab", "scripting"],
+  "permissions": ["storage"],
   "background": {
     "service_worker": "background.js"
   },
@@ -30,5 +20,11 @@
       "matches": ["<all_urls>"],
       "js": ["content.js"]
     }
-  ]
+  ],
+  "host_permissions": ["http://*/*", "https://*/*"],
+  "icons": {
+    "16": "icons/icon-16.png",
+    "48": "icons/icon-48.png",
+    "128": "icons/icon-128.png"
+  }
 }
